[package]
name = "track17"
version = "0.1.0"
authors = ["Douman <douman@gmx.se>"]
description = "Small parcel tracking app that uses 17track.net API."
license = "Apache-2.0"
readme = "README.md"

[dependencies]
clap = "2"

serde = "1"
serde_derive = "1"
serde_json = "1"

hyper = "0"
hyper-tls = "0"
tokio-core = "0"
futures = "0"
